Fix about text size to prevent nav bar overlap

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -144,7 +144,7 @@ h1, h2, h3, h4, h5, h6 {
       text-transform: none;
     }
     .content {
-      @include relative-font-size(1.1);
+      @include relative-font-size(1);
     }
     .wrapper {
       position: relative;
